@@ -1,6 +1,8 @@
 package com.project.fastLane.config;
 
 import io.swagger.annotations.Api;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import springfox.documentation.builders.ApiInfoBuilder;
@@ -15,13 +17,9 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Configuration
 @EnableSwagger2
 public class SwaggerConfig {
-    public static final String AUTHORIZATION_HEADER = "Authorization";
 
     private ApiKey apiKey() {
         return new ApiKey("JWT", "Authorization", "header");
@@ -29,8 +27,8 @@ public class SwaggerConfig {
 
     private SecurityContext securityContext() {
         return SecurityContext.builder()
-                .securityReferences(defaultAuth())
-                .build();
+            .securityReferences(defaultAuth())
+            .build();
     }
 
     List<SecurityReference> defaultAuth() {
@@ -43,17 +41,17 @@ public class SwaggerConfig {
     @Bean
     public Docket swaggerApi() {
         return new Docket(DocumentationType.SWAGGER_2)
-                .useDefaultResponseMessages(false)
-                .apiInfo(swaggerInfo())
-                .securityContexts(Arrays.asList(securityContext()))
-                .securitySchemes(Arrays.asList(apiKey()))
-                .select()
-                .apis(RequestHandlerSelectors.withClassAnnotation(Api.class)).paths(PathSelectors.any()).build();
+            .useDefaultResponseMessages(false)
+            .apiInfo(swaggerInfo())
+            .securityContexts(List.of(securityContext()))
+            .securitySchemes(List.of(apiKey()))
+            .select()
+            .apis(RequestHandlerSelectors.withClassAnnotation(Api.class)).paths(PathSelectors.any()).build();
     }
 
     private ApiInfo swaggerInfo() {
         return new ApiInfoBuilder().title("FAST LANE PROJECT").description("패스트레인 사전 테스트_회원가입_API")
-                .version("1.0").build();
+            .version("1.0").build();
     }
 
 }
